@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationTests.cs" />
     <Compile Include="StringUtilitiesTests.cs" />
+    <Compile Include="TransactionTests.cs" />
     <Compile Include="TypeUtilitiesTests.cs" />
   </ItemGroup>
   <ItemGroup>
